<?xml version="1.0"?>
<package format="2">
  <name>cxxopts</name>
  <version>2.1.2</version>
  <description>
    Helper library for parsing command line arguments.
  </description>
  <maintainer email="jarro2783@unknown.com">
    jarro2783
  </maintainer>
  <license>MIT</license>

  <url>https://github.com/jarro2783/cxxopts</url>

  <author email="jarro2783@unknown.com">
    jarro2783
  </author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>